dd left-padding 0 to map-container class to prevent overflow

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     padding: 0;
 }
 
+.map-container {
+    padding-left: 0;
+}
+
 .my-map {
     position: absolute;
     width: 100%;
